fix: button visibility

--- a/asset/main.css
+++ b/asset/main.css
@@ -386,6 +386,7 @@ main {
     flex: 1 0 auto;
     width: calc((100% - 2rem) / 3);
     scroll-snap-align: start;
+
 }
 
 .upcoming_container .slider ul .event_container {
@@ -394,7 +395,7 @@ main {
     align-items: center;
     gap: 1rem;
     padding: 1rem 1.5rem;
-    box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.5);
+    box-shadow: inset 0 0 1px 0.5px rgba(0, 0, 0, 0.5);
     border-radius: 10px ;
     height: 100%;
     background-color: white;
